--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -5,5 +5,19 @@
     "password": "Vy3LaFEeCr",
     "database": "sql6703840",
     "dialect": "mysql"
+  },
+  "test": {
+    "host": "sql6.freesqldatabase.com",
+    "username": "sql6703840",
+    "password": "Vy3LaFEeCr",
+    "database": "sql6703840",
+    "dialect": "mysql"
+  },
+  "production": {
+    "host": "sql6.freesqldatabase.com",
+    "username": "sql6703840",
+    "password": "Vy3LaFEeCr",
+    "database": "sql6703840",
+    "dialect": "mysql"
   }
 }
